# 2DMeanField

./: CMakeLists.txt
src/app/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/CPU/: meanfield_cpu.cpp  meanfield_cpu.h
src/lib/CUDA/: cuda_util.h
src/lib/shared/: bilateral_filter.h  gaussian_filter.h  meanfield.h
